<resources>
    <string name="app_name">Piction</string>
    <string name="btn_skip">Skip (%1$d)</string>
    <string name="btn_success">Guessed It</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key">com.example.pictionarycompanion.PREFERENCES</string>
    <string name="btn_newWord">New Word</string>
    <string name="dialog_pause_message">Game Paused</string>
    <string name="resume">Resume</string>
    <string name="save_game">Save Game</string>
    <string name="quit_game">Quit Game</string>
    <string name="btn_skip_no_team">Skip</string>
    <string name="team_guessed_it">%1$s Guessed\nIt</string>
    <string name="allplay_warning_title">Allplay Category</string>
    <string name="allplay_warning">The next round will be Allplay meaning that both teams will attempt to draw the same word and the first team to guess the word gets the point!</string>
    <string name="alternate_every_turn_description">If turned off teams who guess correctly draw again, if not the other team goes after each turn.</string>
    <string name="all_play">All Play</string>
    <string name="info">About</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="time_up">Time\'s up.</string>
    <string name="current_tone">Current tone: %s</string>
    <string name="saved_animation_setting">SAVED_ANIMATE</string>
    <string name="saved_ringtone_setting">SAVED_RINGTONE</string>
    <string name="hide_reset_timer">Hide Reset Timer</string>
    <string name="all_play_category">All Play Category</string>
    <string name="infinite">Infinite</string>
    <string name="limited">Limited</string>
    <string name="skips_per_team">skips per team</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="the_word_was">The Word Was:</string>
    <string name="new_game">New Game</string>
    <string name="start_game">Start Game</string>
    <string name="contact_the_developer_send_feedback">Contact the developer/Send feedback</string>
    <string name="use_description">Using the app is simple. Select any number of word categories, choose your settings and begin. Everyone plays Pictionary a little differently, and Piction was designed to support that. There are some game settings that you can quickly adjust during gameplay, like hiding buttons or toggling the All Play category.</string>
    <string name="using_piction">Using Piction</string>
    <string name="success">Success</string>
    <string name="animate_underscore">%1$s_</string>
    <string name="word_generator_timer_and_score_keeper_for_pictionary">word generator, timer, and score keeper for pictionary</string>
    <string name="set_up">Set-up</string>
    <string name="word_difficulty">Word Difficulty</string>
    <string name="team_1_name">Team 1 Name</string>
    <string name="team_2_name">Team 2 Name</string>
    <string name="alternate_every_turn">Alternate Every Turn</string>
    <string name="if_included_both_teams_will_attempt_to_draw_words_from_this_category_simultaneously">If included, both teams will attempt to draw words from this category simultaneously</string>
    <string name="include_timer">Include Timer</string>
    <string name="guess_the_word_before_times_runs_out">Guess the word before times runs out</string>
    <string name="seconds">seconds</string>
    <string name="word_skip_limit">Word Skip Limit</string>
    <string name="animations">Animations</string>
    <string name="alarm_tone">Alarm Tone</string>
    <string name="ringtone">Ringtone</string>
    <string name="hand_the_device_to">Hand the device to:</string>

    <string name="start_turn">Start Turn</string>
    <string name="fail">Fail</string>
    <string name="start_the_next_turn">start the next turn</string>
    <string name="textview">TextView</string>
    <string name="team_1">Team 1</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="sports">Sports</string>
    <string name="leave_a_review">Leave A Review</string>
    <string name="review_request">Like Piction? Leave a review. Thanks for your support!</string>
    <string name="rate_piction">Rate Piction</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="not_again">Don\'t show this again</string>


</resources>