<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryDark"
    android:id="@+id/fail_constraint"
    tools:context="app.ncore.piction.BetweenTurn">

    <TextView
        android:id="@+id/tvFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text"
        android:gravity="center|center_horizontal"
        android:text="@string/fail"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnNextTurn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />


    <TextView
        android:id="@+id/tvTeam1"
        style="@style/text"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/tvTeam1Score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTeam2"
        style="@style/text"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTeam2Score"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTeam1Score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text=""
        android:textAlignment="center"
        android:textSize="@dimen/score_textsize"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTeam1" />

    <TextView
        android:id="@+id/tvTeam2Score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text=""
        android:textAlignment="center"
        android:textSize="@dimen/score_textsize"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTeam1Score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />
<!--    <LinearLayout-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="@dimen/enter_btn_height"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->
<!--            <Button-->
<!--            android:id="@+id/btnReturnToMainMenu"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="3"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@drawable/colorsecondary_button"-->
<!--            android:fontFamily="@font/roboto_mono"-->
<!--            android:onClick="onNextTurnBtn"-->
<!--            android:text="start the next turn" />-->
<!--        <Button-->
<!--            android:id="@+id/btnNextTurn"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="7"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@drawable/colorprimarydark_button"-->
<!--            android:fontFamily="@font/roboto_mono"-->
<!--            android:onClick="onNextTurnBtn"-->
<!--            android:text="start the next turn"-->
<!--            />-->


<!--    </LinearLayout>-->
    <Button
        android:id="@+id/btnNextTurn"
        android:layout_width="0dp"
        android:layout_height="@dimen/enter_btn_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/colorprimarydark_button"
        style="@style/text.label"
        android:onClick="onNextTurnBtn"
        android:text="@string/start_the_next_turn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="@dimen/score_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTeam1" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/the_word_was"
        style="@style/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFail" />

    <TextView
        android:id="@+id/tvFailWord"
        style="@style/text"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvDirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/hand_the_device_to"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNextTurn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFail" />

    <TextView
        android:id="@+id/tvNextTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        style="@style/text"
        android:text="@string/team_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDirect" />

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onSettingsClick"
        app:layout_constraintBottom_toTopOf="@+id/btnNextTurn"
        app:layout_constraintStart_toStartOf="@+id/btnNextTurn"
        app:srcCompat="@drawable/ic_settings" />


</androidx.constraintlayout.widget.ConstraintLayout>