<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="app.ncore.piction.Gameplay">


    <!--    below is a numeric timer but I think I will go with a graphical one instead-->

    <!--<TextView
        android:id="@+id/textView2"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="00:00"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->


    <TextView
        android:id="@+id/tvWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text=""
        android:textAlignment="center"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnGuess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--        <Button-->
    <!--            android:id="@+id/btnFail"-->
    <!--            style="@style/text.label"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="200dp"-->
    <!--            android:layout_margin="8dp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:background="@drawable/colorsecondarydark_button"-->

    <!--            android:text="Fail" />-->


    <Button
        android:id="@+id/btnGuessAllPlayTeam1"
        style="@style/text.label"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/colorprimary_button"
        android:onClick="onTeam1GuessedIt"
        android:text="@string/btn_success"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSkip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSkip"
        style="@style/text.label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/colorsecondary_button"
        android:onClick="onProcessSkip"
        android:text="@string/btn_skip"
        app:layout_constraintBottom_toTopOf="@+id/btnFail"
        app:layout_constraintEnd_toStartOf="@+id/btnGuess"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnGuessAllPlayTeam1"
        app:layout_constraintTop_toTopOf="@id/btnGuess" />

    <Button
        android:id="@+id/btnGuess"
        style="@style/text.label"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="4dp"
        android:background="@drawable/colorprimary_button"
        android:onClick="onGuessedIt"
        android:text="@string/btn_success"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSkip" />

    <Button
        android:id="@+id/btnFail"
        style="@style/text.label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/colorsecondarydark_button"
        android:text="@string/fail"
        app:layout_constraintBottom_toBottomOf="@id/btnGuess"
        app:layout_constraintEnd_toEndOf="@id/btnSkip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/btnSkip"
        app:layout_constraintTop_toBottomOf="@+id/btnSkip" />


    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onPauseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pause_circle" />

    <ImageView
        android:id="@+id/ivCategoryIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCategory"
        app:layout_constraintEnd_toStartOf="@+id/tvCategory"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvCategory"
        app:srcCompat="@drawable/ic_football_image" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        style="@style/text"
        android:text="@string/sports"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivCategoryIcon"
        app:layout_constraintTop_toBottomOf="@+id/tvWord" />


</androidx.constraintlayout.widget.ConstraintLayout>